--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
   config:
     activate:
       on-profile: dev
+
   r2dbc:
     url: r2dbc:postgresql://localhost:5430/mypastebin?schema=public
     password: admin
@@ -36,4 +37,8 @@ logging:
 app:
   all-methods-log:
     enabled: true
-
+springdoc:
+  api-docs:
+    path: /swagger-doc/v3/api-docs
+  swagger-ui:
+    path: /swagger-doc/swagger-ui.html
