--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changeset/02022023_init_tables_paste_user_role.yaml
   - include:
       file: db/changelog/changeset/10022023_init_table_role.yaml
+  - include:
+      file: db/changelog/changeset/13022023_init_table_user_roles.yaml
