--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -7,3 +7,6 @@ databaseChangeLog:
       file: db/changelog/changeset/10022023_init_table_role.yaml
   - include:
       file: db/changelog/changeset/13022023_init_table_user_roles.yaml
+  - include:
+      file: db/changelog/changeset/16022023_alter_table_user_add_date_fields.yaml
+
