--- a/src/main/resources/secrets.yml
+++ b/src/main/resources/secrets.yml
@@ -2,3 +2,7 @@ spring:
   r2dbc:
     password: admin
     username: admin
+
+app:
+  security:
+    jwt-key: FGAS23fdbdbdfgtweUTEFJD@JFGA$$53frRE!Rgr453WR4fdDFER3EWhjhffsFS$YJH
